@@ -11,6 +11,8 @@ import javax.servlet.ServletOutputStream;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
+import net.jcip.annotations.ThreadSafe;
+
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -23,12 +25,13 @@ import org.apache.commons.logging.LogFactory;
  * should be resolved by the service.
  * 
  * <p>
- * Note: This class is efectively a singleton as it is only intantiated once by {@link OntServlet}
+ * Note: This class is effectively a singleton as it is only instantiated once by {@link OntServlet}
  * (ie., the singleton-ness is not forced here).
  * 
  * @author Carlos Rueda
  * @version $Id$
  */
+@ThreadSafe
 class RegularFileDispatcher {
 	
 	private final Log log = LogFactory.getLog(RegularFileDispatcher.class);
